ORCJAVA-518
===========

 - Improve RemoteProxy polling mechanism (Rainer Hitz) 

ORCJAVA-478
===========

 - Update Device Discovery to Object Model API (Juha Lindfors, Eric Bariaux)

   Work-In-Progress

ORCJAVA-449
===========

  - Replace RXTX library with nrjavaserial library (Rainer Hitz)

Controller Pro 1.4.0
====================

New Features:
  - Upgrade flexjson library to version 3.2 (ORCJAVA-498)
  - Support remote command to trigger online sync (ORCJAVA-501)
  - Start the BeehiveCommandCheckService thread even if no configuration is loaded (ORCJAVA-504)
  - Add Domintell protocol support (ORCJAVA-253)
  - Parameterize common Beehive connection parameters in config.properties (ORCJAVA-443)

Bug Fixes:

  - Fixed: Multiple issues in BeehiveCommandCheckServiceTest (ORCJAVA-497)
  - Do not encode password in communication with CCS/DDS (ORCJAVA-495)
  - Never send md5 encoded password to backend (ORCJAVA-503)
  - Remove warnings when compiling under JDK7/8 (ORCJAVA-499)
  - Fixed: Re-connection issues with AMX protocol (ORCJAVA-456)
  - Fixed: Potential NPE in BeehiveCommandCheckService (ORCJAVA-505)

Controller Pro 1.3.0
====================

New Features:
  - Add TCPSocketPort for protocols that use TCP (Richard Turner, ORCJAVA-482)
  - Have an option to store password in plain text file instead of keystore (ORCJAVA-493)
  - Add VelbusConfiguration support (ORCJAVA-494)

Controller Pro 1.2.0
====================

New Features:
  - Implement Z-Wave command classes that are needed for configuring
	  Z-Wave nodes (Rainer Hitz, ORCJAVA-440)
  - Add ability to reset RRD4J graph time axis (Richard Turner, ORCJAVA-452)
  - Improvements to the Russound protocol implementation (Torbjorn Osterdahl, ORCJAVA-461)
  - Add possibility of ReadCommand implementations to define
	  their polling interval (Marcus Redeker, ORCJAVA-464)
  - Update HTTP protocol to extend ReadCommand instead of
	  implementing EventListener (Marcus Redeker, ORCJAVA-465)